bin_PROGRAMS = flexisusy

AM_CXXFLAGS = -ggdb -Wall -pedantic -Wextra -Wcast-qual -Wcast-align -Woverloaded-virtual -Wnon-virtual-dtor -Wfloat-equal

AM_CFLAGS =

flexisusy_LDADD = @FLIBS@

flexisusy_SOURCES = \
	main.cpp \
	def.h \
	def.cpp \
	deq_solver.hpp \
	dilog.h \
	dilog.f \
	linalg.h \
	linalg.cpp \
	mycomplex.h \
	numerics.h \
	numerics.cpp \
	rge.h \
	rge.cpp \
	utils.h \
	utils.cpp \
	two_scale_solver.hpp \
	two_scale_solver.cpp
